Lab 5 Table overflow fix

--- a/src/components/table/style.css
+++ b/src/components/table/style.css
@@ -31,6 +31,10 @@
     padding: 0 40px 40px 40px;
 }
 
+.ow-auto {
+    overflow-x: auto;
+}
+
 .func-icons {
     display: flex;
     justify-content: end;
